<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">TheLabel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="DummyText"> 한산섬 달 밝은 밤에 수루에 혼자 앉아 \n 큰 칼 옆에 차고 깊은 시름 하는 차에 \n 어디서 일성호가는 남의 애를 끊나니</string>
    <string name="DummyText_agree"> 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n
        서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 
        서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 서비스 이용 약관 내용 입니다.\n 그만좀 내려요!
    </string>
    <string name="DummyText_account">
        홍대 버스킹 환영합니다!\n[더레이블] 매주 토요일\n메세나폴리스 8시 공연!
    </string>
    <string name="text_position_vocal">보컬</string>
    <string name="text_position_piano">피아노</string>
    <string name="text_position_acoustic">어쿠스틱</string>
    <string name="text_position_elec">일렉</string>
    <string name="text_position_base">베이스</string>
    <string name="text_position_etc">etc</string>
    <string name="text_position_guitar">기타</string>
    <string name="text_position_electricGuitar">일렉기타</string>
    <string name="text_position_drum">드럼</string>
    <string name="text_position_keyboard">키보드</string>
    <string name="text_genre_Song">가요</string>
    <string name="text_genre_RnBSoul">R<![CDATA["&"]]>B/SOUL</string>
    <string name="text_genre_Rock">락</string>
    <string name="text_genre_Jazz">재즈</string>
    <string name="text_genre_RapHiphop">랩/힙합</string>
    <string name="text_genre_NewAge">뉴에이지</string>
    <string name="text_genre_Pop">팝</string>
    <string name="text_genre_CCM">CCM</string>
    <string name="text_genre_Electronica">일렉트로니카</string>
    <string name="text_genre_AcousticPork">어쿠스틱/포크</string>
    <string name="text_agree_service">서비스 이용약관 동의 (필수)</string>
    <string name="text_agree_personalInformation"> 개인정보 수집/이용 동의 (필수)</string>
    <string name="hint_Email">이메일 아이디</string>
    <string name="hint_password">비밀번호(영문, 숫자, 특수문자 8-16자리)</string>
    <string name="hint_password_check">비밀번호 재입력</string>
    <string name="check_overlap">중복확인</string>
    <string name="next_step">다음 단계</string>
    <string name="Toolbar_AppTitle_signUp_activity">이메일 입력 및 약관동의</string>
    <string name="Toolbar_AppTitle_edit_signUp_activity">기본정보 입력</string>
    <string name="err_msg_email">Email을 입력하세요.</string>
    <string name="err_msg_password">비밀번호를 입력하세요</string>
    <string name="err_msg_password_check">입력하신 비밀번호와 다릅니다.</string>
    <string name="default_choice">선택하지않음</string>
    <string name="hint_nicknameEdit">      닉네임 (한글, 영문, 숫자, 특수문자 2-8자리 이내) </string>
    <string name="text_usersex">성별</string>
    <string name="text_male">남자</string>
    <string name="text_female">여자</string>
    <string name="text_location">지역</string>
    <string name="text_city">시/도</string>
    <string name="text_city_detail">시/군/구</string>
    <string name="text_Position">포지션</string>
    <string name="text_Genre">장르</string>
    <string name="text_SignUpComplete">가입완료</string>
    <string name="Toolbar_AppTitle">The label</string>
    <string name="Toolbar_Message">Message</string>
    <string name="Toolbar_OtherUser">OtherUser</string>
    <string name="Toolbar_LabelPage">Label Page</string>
    <string name="Toolbar_Setting">AppSettings</string>
    <string name="Toolbar_Profile">profileSettings</string>
    <string name="Toolbar_LikePage">Toolbar_LikePage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="makelabel_inputName">레이블 이름</string>
    <string name="makelabel_inputText">소개글 (50자 이내)</string>
    <string name="makelabel_inpputGenre">장르</string>
    <string name="makelabel_need">NEED</string>
    <string name="makelabel_inputName_err">이름을 입력해주세요</string>
    <string name="makelabel_complete">생성 완료</string>
    <string name="settinglabel_complete">설정 완료</string>
    <string name="settinglabel_profile_edit">프로필 수정</string>
    <string name="settinglabel_member_manage">마스터 권한 및 맴버 관리</string>
    <string name="settinglabel_entrust">권한 위임</string>
    <string name="settinglabel_finemember">맴버 탈퇴</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="labelmain_memberlist">구성 멤버</string>
    <string name="labelmain_plusmember">+더보기</string>
    <string name="labelmain_labecontents">레이블 소식</string>
    <string name="youtube_api_demo">YouTube API Demos</string>
    <string name="videowall_demo_name">Video Wall</string>
    <string name="videolist_demo_name">Video List</string>
    <string name="standalone_player_demo_name">Standalone Player</string>
    <string name="playerview_demo_name">Simple PlayerView</string>
    <string name="fragment_demo_name">Simple PlayerFragment</string>
    <string name="player_controls_demo_name">Custom Player Controls</string>
</resources>