<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpEditActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/ImageView_profileImage"
                android:layout_width="@dimen/profileSize_120dp"
                android:layout_height="@dimen/profileSize_120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile_girl" />

            <ImageButton
                android:id="@+id/imageButton_uploadProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/ImageView_profileImage"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/ImageView_profileImage"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#00000000"
                android:baselineAlignBottom="false"
                android:clickable="true"
                android:contextClickable="false"
                android:foregroundTintMode="multiply"
                android:src="@drawable/ic_menu_camera" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_signUp_userNickName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_nickName_height"
                android:hint="@string/hint_nicknameEdit"
                android:textSize="@dimen/TextSize_EditSignUp_subtitle" />

            <Button
                android:id="@+id/button_checkOverlap"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_overlapCheck"
                android:text="@string/check_overlap"
                android:textSize="@dimen/text_size_16sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup_userSex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginRight="@dimen/margin_radiogroup_LeftRight"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText_signUp_userNickName"
                    android:layout_marginLeft="@dimen/margin_signUp_subtitle"
                    android:layout_weight="0.5"
                    android:text="@string/text_usersex"
                    android:textSize="@dimen/TextSize_EditSignUp_subtitle" />
                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_signUp_userNickName"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_weight="3.5"
                    android:checked="false"
                    android:text="@string/text_male" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_signUp_userNickName"
                    android:layout_toEndOf="@+id/radioButton_male"
                    android:layout_toRightOf="@+id/radioButton_male"
                    android:layout_weight="3.5"
                    android:checked="false"
                    android:text="@string/text_female" />
            </RadioGroup>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="@dimen/margin_signUp_subtitle"
                android:text="@string/text_location"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/TextSize_EditSignUp_subtitle" />
            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_city"
                android:textSize="@dimen/TextSize_EditSignUp_elementText" />

            <Spinner
                android:id="@+id/spinner_town"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/text_city_detail"
                android:textSize="@dimen/TextSize_EditSignUp_elementText" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_radiogroup_LeftRight"
            android:layout_marginRight="@dimen/margin_radiogroup_LeftRight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="포지션"
                android:id="@+id/textView6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="장르"
                android:id="@+id/textView7"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/spinner_position"
                android:layout_toEndOf="@+id/spinner_position" />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_position"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView6"
                android:layout_toEndOf="@+id/textView6" />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_genre"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView7"
                android:layout_toEndOf="@+id/textView7" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_signUpComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_SignUpComplete" />

</RelativeLayout>
