<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team.nuga.thelabel.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/frameLayout_personal"
        android:layout_below="@+id/frameLayout_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_personalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/DummyText_agree"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </ScrollView>
    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_agree_service"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/checkBox_service"
        android:layout_toRightOf="@+id/checkBox_service"
        android:layout_toEndOf="@+id/checkBox_service" />

    <CheckBox
        android:id="@+id/checkBox_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="New CheckBox"
        android:layout_below="@+id/frameLayout_personal"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:id="@+id/frameLayout_service"
        android:layout_below="@+id/editText_signUp_password_check"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            >

            <TextView
                android:id="@+id/textView_serviceAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:text="@string/DummyText_agree"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </ScrollView>
    </FrameLayout>

    <EditText
        android:id="@+id/editText_signUp_password_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_signUp_password"
        android:ems="10"
        android:hint="@string/hint_password_check"
        android:inputType="textPassword"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <EditText
        android:id="@+id/editText_signUp_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_signUp_email"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <EditText
        android:id="@+id/editText_signUp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hint_Email"
        android:inputType="textEmailAddress"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <CheckBox
        android:id="@+id/checkBox_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:checked="false"
        android:layout_below="@+id/frameLayout_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_agree_personalInformation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/checkBox_personal"
        android:layout_toRightOf="@+id/checkBox_personal"
        android:layout_toEndOf="@+id/checkBox_personal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
