<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_login"
    tools:context="team.nuga.thelabel.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_login"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="40dp">

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:id="@+id/textView_login_findID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="아이디 찾기" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:id="@+id/textView_login_findPW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="비밀번호 찾기" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:id="@+id/textview_login_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="회원가입" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_login_logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center"
            android:src="@drawable/icn_logo" />
    </RelativeLayout>

</RelativeLayout>
